# URLshutoku

./: .env  LICENSE  README.md  TEMP_out.txt  _search_num.txt  pyproject.toml  requirements.txt  temp_main_head.txt
app/: config.py  db.py  main.py  prefectures.py
app/crawler/: extract.py  fetch.py  normalize.py  search.py
app/services/: llm.py  pipeline.py
app/static/css/: styles.css
app/templates/: base.html  index.html  job.html
urlshutoku.egg-info/: SOURCES.txt  requires.txt
